--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jy-ui": "^1.0.0",
+    "k-vui-y": "^1.1.4",
     "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
-    "vux": "^2.9.2"
+    "vux": "^2.9.2",
+    "yky-project": "^1.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -45,7 +48,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
-    "less": "^3.8.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
